force-app/main/default/objects/Case/fields/Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closure Date</label>
    <type>DateTime</type>
</CustomField>