force-app/main/default/objects/Case/fields/JN_Bank_Locations__c.field-meta.xml
<CustomField>
    <fullName>JN_Bank_Locations__c</fullName>
    <description>The servicing location of the member</description>
    <label>JN Bank Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JN_Locations</valueSetName>
    </valueSet>
</CustomField>