force-app/main/default/objects/Case/fields/Received_via__c.field-meta.xml
<CustomField>
    <fullName>Received_via__c</fullName>
    <label>Received via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Telephone call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>