force-app/main/default/objects/Case/fields/Redirected_To__c.field-meta.xml
<CustomField>
    <fullName>Redirected_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>JN Staff Name Here</inlineHelpText>
    <label>Redirected To:</label>
    <length>50</length>
    <type>Text</type>
</CustomField>