force-app/main/default/objects/Case/fields/Redirected_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Redirected_To_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Redirected To Email:</label>
    <type>Email</type>
</CustomField>