force-app/main/default/objects/Case/fields/Resolution_Communicated_by__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Communicated_by__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolution Communicated by:</label>
    <length>50</length>
    <type>Text</type>
</CustomField>