force-app/main/default/objects/Case/fields/Rim_Number__c.field-meta.xml
<CustomField>
    <fullName>Rim_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RIM Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>