force-app/main/default/objects/Case/recordTypes/Referred_Application.recordType-meta.xml
<RecordType>
    <fullName>Referred_Application</fullName>
    <active>true</active>
    <businessProcess>Application_Process</businessProcess>
    <label>Referred Application</label>
</RecordType>